faze final do projeto

--- a/apontamentos.html
+++ b/apontamentos.html
@@ -10,7 +10,13 @@
     <div id="notificacao-container"></div>
     <div class="app-wrapper">
       <header class="app-header">
-        <h1>Sistema de Produção - Retrabalho</h1>
+        <div class="header-content">
+            <h1>Sistema de Produção - Retrabalho</h1>
+            <div class="user-info">
+              <span id="nome-usuario-logado">Carregando...</span>
+              <a href="/logout" class="btn-logout">Sair</a>
+            </div>
+        </div>
         <nav class="app-nav">
           <a href="/apontamentos" class="active">Apontamento de Retrabalho</a
           ><a href="/cadastros">Cadastros Base</a
